--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,20 @@
 theme: jekyll-theme-hacker
+
+...
+locales:
+  en:
+    nav:
+    - text: Welcome
+      url: /en/welcome
+    - text: Blog
+      url: /en/blog
+      layout: post
+    ...
+  es:
+    nav:
+    - text: Bienvenido
+      url: /es/bienvenido
+    - text: Blog
+      url: /es/blog
+      layout: post
+    ...
